# nxdl

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: release.yml
src/: cli.rs  filter.rs  login.rs  main.rs  miniwzlib.rs  net.rs  ngm.rs  nxl.rs  nxl_patch.rs  resume.rs  taskprogress.rs
