[package]
name = "nxdl"
version = "0.1.2-prerelease2"
edition = "2021"
description = "A downloader for NXL games"
license = "MIT"

[[bin]]
name = "nxdl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["socks-proxy"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
sha1 = "0.10"
md5 = "0.7"
base64 = "0.22"
flate2 = "1"
hex = "0.4"
regex = "1"
indicatif = "0.17"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

# WebView-based interactive login (`nxl --login`). wry uses the OS-native
# WebView (WebView2 on Windows, WKWebView on macOS), so no extra system
# libraries are needed on those platforms. Linux is intentionally excluded
# because it would require webkit2gtk/gtk system packages.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
wry = "0.55"
tao = "0.35"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
